<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/profile_nav"
            android:checked="true"/>
        <item
            android:id="@+id/nav_global"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/global_map_button_text"
            android:checked="true"/>
        <item
            android:id="@+id/nav_donate"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/contribute_tab"
            android:checked="true"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/logout_text"
            android:checked="true"/>
    </group>

</menu>