<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ca.bcit.androidProject.CausesFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="11dp"
        android:text="@string/moreInfo_title"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="76dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <TextView
        android:id="@+id/InfoContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="30dp"
        android:text="@string/sea_level_p1"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/InfoLinkContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/resources_title"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/InfoLinkContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="5dp"
        android:text="@string/nasa_link"
        android:textAlignment="textStart"/>

    <TextView
        android:id="@+id/InfoLinkContent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="5dp"
        android:text="@string/ocean_link"
        android:textAlignment="textStart"/>

    <TextView
        android:id="@+id/InfoLinkContent3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="5dp"
        android:text="@string/natGeo_link"
        android:textAlignment="textStart"/>


</LinearLayout>
</ScrollView>