<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/pagebackground"
    android:padding="20dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_margin="3dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_input_field"
        android:textColorHint="@color/teal_700"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="3dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_input_field"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="3dp"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:hint="@string/phone"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_input_field"
        android:inputType="phone" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"

        android:textSize="20sp"
        android:text="@string/edit" />



</LinearLayout>
