<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ca.bcit.androidProject.ContributionActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>


    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="11dp"
        android:text="@string/contributePage"
        android:textAlignment="center"
        android:textSize="20sp" />



    <EditText
        android:id="@+id/card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="11dp"
        android:hint="@string/payment_CardName" />


    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="11dp"
        android:hint="@string/payment_CardNum" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/payment_cvv" />


        <EditText
            android:id="@+id/expirydate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="5dp"
            android:hint="@string/payment_expiry"
            android:autofillHints="" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/custom_button"
        android:text="@string/payment_btn" />

</LinearLayout>